# SwapMic

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: TRAINING.md
examples/: README.md
src/swapmic/: __init__.py  cli.py  convert.py  pipeline.py  remix.py  separate.py  server.py
tests/: test_remix.py
